--- a/composer.json
+++ b/composer.json
@@ -59,7 +59,7 @@
     },
     "autoload": {
         "files": [
-            "./../fdn/support/helpers.php"
+            "./../fdn/helpers.php"
         ],
         "psr-4": {
             "common\\": "./../fdn"
