--- a/composer.json
+++ b/composer.json
@@ -62,7 +62,8 @@
             "./../fdn/helpers.php"
         ],
         "psr-4": {
-            "common\\": "./../fdn"
+            "common\\": "./../fdn",
+            "models\\": "./../fdn/_models"
         }
     }
 }
