--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "yiisoft/yii2": "~2.0.5",
         "yiisoft/yii2-bootstrap": "~2.0.0",
         "yiisoft/yii2-swiftmailer": "~2.0.0",
-        "cyneek/yii2-blade": "^1.1"
+        "cyneek/yii2-blade": "^1.1",
+        "euautomation/graphql-client": "^0.2.0"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
